showing the goals as iframes

--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@
     font-weight: 800;
     font-size: 18px;
 }
+.linktitle {
+    font-weight: 800;
+    font-size: 28px;
+    text-align:center;
+}
 
 
 
