--- a/frontendmasters/style.css
+++ b/frontendmasters/style.css
@@ -1,5 +1,12 @@
+.CodeMirror-scroll {
+  font-size: 24px;
+  line-height: 24px;
+}
 body {
   font-family: Lato;
+}
+snippet {
+  display: none;
 }
 .content {
   position:absolute;
@@ -33,6 +40,10 @@ body {
   display: inline;
   list-style-type: none;
 }
+li {
+  list-style: none;
+  list-style-type: none;
+}
 h1 {
   font-family: Ubuntu;
   font-size: 72px;
@@ -56,11 +67,11 @@ p {
   font-size: 14px;
 }
 .editor {
+  width: 100%;
 }
 .editor .CodeMirror {
   width: 100%;
   height: 100%;
-  padding: 15px;
   overflow-x: scroll;
 }
 aside {
@@ -88,20 +99,21 @@ aside {
 }
 @media only screen and (min-width: 1155px) {
     .sidebyside {
-        width: 950px;
+        width: 100%;
         margin-bottom: 56px;
     }
     .sidebyside .left, .sidebyside .right {
         vertical-align: top;
         margin: 0;
         display: inline-block;
-        width: 440px;
+        width: 45%;
     }
     .sidebyside .left {
-        margin-right: 50px;
+        margin-right: 5px;
     }
     aside {
-      position: absolute;
+      position: relative;
       right: 10px;
+      bottom: 0;
     }
 }
